--- a/index.html
+++ b/index.html
@@ -2,9 +2,96 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Scriptorium</title>
+    <link  href="css/bootstrap.css" rel="stylesheet">
+    <link  href="css/Custom.css" rel="stylesheet">
+
+
 </head>
 <body>
+
+<div class="container background-frame medieval-font">
+
+    <div class="row justify-content-center title-style">
+        <h1>Y's Scriptorium</h1>
+    </div>
+
+    <div class="row">
+        <!--    about me-->
+        <div class="col-sm-12 col-md-3 bio-container black-frame">
+            <div class="col-12">
+                <img src="res/image/selfpaint.gif" class="bio-img">
+            </div>
+            <div class="col-12 bio-content">
+                <div class="row align-content-center">
+                    <h3>Lan Yutian</h3>
+                </div>
+                <div class="row align-content-center medieval-font-paragraph ">
+                    <p>
+                        This site is developed by me using bootstrap.
+                        <br>It is for demonstrating my personal projects.
+                    </p>
+                </div>
+
+            </div>
+        </div>
+        <!--    my projects-->
+        <div class="col-sm-12 col-md-9 project-container ">
+            <!--        project covid19Montreal-->
+            <div class="row mt-2 project-container-child">
+                <div class="col-12  col-lg-7 col-xl-8 normal-font-paragraph">
+                    <p>
+                        Covid19 happens when I lived in montreal. Initially,  sante montreal only provided covid cases in each borough, and I was taking these data to Excel everyday to figure out which area is the most dangerous area. Then I realized I can make it automatic by web scraping, so I started this project.
+                        <br>After I have enough data, I expand the project with some simple web UI.
+
+                    </p>
+                </div>
+                <div class="col-12  col-lg-5 col-xl-4 ">
+                    <div class="img-frame">
+                        <a href="https://beaverinc.github.io/covid19CityMontreal/">
+                            <img src="res/image/covid19Montreal.PNG" class="project-img" >
+                        </a>
+
+                    </div>
+
+                </div>
+            </div>
+            <!--        next project placeholder-->
+
+<!--            <div class="row mt-2 project-container-child">-->
+<!--                <div class="col-12  col-lg-7 col-xl-8 normal-font-paragraph">-->
+<!--                    <p>-->
+<!--                        Project description:-->
+<!--                        <br>placeholder<br>-->
+
+<!--                    </p>-->
+<!--                </div>-->
+<!--                <div class="col-12  col-lg-5 col-xl-4">-->
+<!--                    <img src="res/image/placeholder.png" class=" img-frame project-img">-->
+<!--                </div>-->
+<!--            </div>-->
+
+            <!--        next project placeholder-->
+
+
+
+
+
+        </div>
+    </div>
+
+
+    <div class="row">
+
+    </div>
+
+</div>
+
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="css/bootstrap.css" ></script>
+<script src="http://code.jquery.com/jquery-latest.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
 </body>
 </html>
