--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="row">
         <!--    about me-->
-        <div class="col-sm-12 col-md-3 bio-container black-frame">
+        <div class="col-sm-12 col-lg-3 bio-container black-frame">
             <div class="col-12">
                 <img src="res/image/selfpaint.gif" class="bio-img">
             </div>
@@ -36,7 +36,7 @@
             </div>
         </div>
         <!--    my projects-->
-        <div class="col-sm-12 col-md-9 project-container ">
+        <div class="col-sm-12 col-lg-9 project-container ">
             <!--        project covid19Montreal-->
             <div class="row mt-2 project-container-child">
                 <div class="col-12  col-lg-7 col-xl-8 normal-font-paragraph">
