--- a/index.html
+++ b/index.html
@@ -23,8 +23,23 @@
                 <img src="res/image/selfpaint.gif" class="bio-img">
             </div>
             <div class="col-12 bio-content">
-                <div class="row align-content-center">
-                    <h3>Lan Yutian</h3>
+                <div class="align-content-center">
+                    <div class="row">
+                        <h3>Yutian</h3>
+                    </div>
+                    <div class="row">
+                        <h6>Developer<br></h6>
+                    </div>
+                    <div class="row">
+                        <h6>------</h6>
+                    </div>
+                    <div class="row">
+                        <h6>Computer Science</h6>
+                    </div>
+                    <div class="row">
+                        <h6>B.Eng. Civil</h6>
+                    </div>
+
                 </div>
                 <div class="row align-content-center medieval-font-paragraph ">
                     <p>
@@ -32,6 +47,25 @@
                         <br>It is for demonstrating my personal projects.
                     </p>
                 </div>
+                <div class="row">
+                    <a href="mailto:lanyutian88@gmail.com"  class="btn icon-email icon-in-btn">
+                        My Email
+                    </a>
+
+                </div>
+                <div class="row ">
+                    <a href="https://github.com/BeaverInc?tab=repositories"  class="btn icon-in-btn icon-github ">
+                        My Github
+                    </a>
+
+                </div>
+                <div class="row ">
+                    <a href= "https://www.linkedin.com/in/yutian-lan-90124b40/" class="btn icon-in-btn icon-linkedin">
+                        My Linkedin
+                    </a>
+
+                </div>
+
 
             </div>
         </div>
@@ -39,19 +73,33 @@
         <div class="col-sm-12 col-lg-9 project-container ">
             <!--        project covid19Montreal-->
             <div class="row mt-2 project-container-child">
-                <div class="col-12  col-lg-7 col-xl-8 normal-font-paragraph">
-                    <p>
-                        Covid19 happens when I lived in montreal. Initially,  sante montreal only provided covid cases in each borough, and I was taking these data to Excel everyday to figure out which area is the most dangerous area. Then I realized I can make it automatic by web scraping, so I started this project.
-                        <br>After I have enough data, I expand the project with some simple web UI.
+                <div class="col-12  col-lg-7 col-xl-8">
+                    <div class = "normal-font-paragraph">
+                        <p>
+                            Covid19 happens when I lived in montreal. Initially,  sante montreal only provided covid cases in each borough, and I was taking these data to Excel everyday to figure out which area is the most dangerous area. Then I realized I can make it automatic by web scraping, so I started this project.
+                            <br>After I have enough data, I expand the project with some simple web UI.
 
-                    </p>
+                        </p>
+                    </div>
+
+                    <div class="row ">
+                        <div class = "col-6">
+                            <a href="https://beaverinc.github.io/covid19CityMontreal/"  class="btn icon-in-btn icon-play ">
+                                Go to project
+                            </a>
+                        </div>
+                        <div class = "col-6">
+                            <a href="https://github.com/BeaverInc/covid19CityMontreal"  class="btn icon-in-btn icon-github ">
+                                Go to repositories
+                            </a>
+                        </div>
+
+                    </div>
                 </div>
+
                 <div class="col-12  col-lg-5 col-xl-4 ">
                     <div class="img-frame">
-                        <a href="https://beaverinc.github.io/covid19CityMontreal/">
-                            <img src="res/image/covid19Montreal.PNG" class="project-img" >
-                        </a>
-
+                        <img src="res/image/covid19Montreal.PNG" class="project-img" >
                     </div>
 
                 </div>
