changed link of project covid19Montreal

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
                     <div class="row ">
                         <div class = "col-6">
-                            <a href="https://beaverinc.github.io/covid19CityMontreal/"  class="btn icon-in-btn icon-play ">
+                            <a href="https://beaverinc.github.io/covid19montreal"  class="btn icon-in-btn icon-play ">
                                 Go to project
                             </a>
                         </div>
